<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_color"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="51dp"
        layout="@layout/act_detail_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- 以下是滚动内容开始 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingLeft="15dp" >

                <!-- 用餐时间 -->

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/restaurant_name_lable"
                        android:textColor="@color/font_lable"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_confirm_meal_time"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="15dp"
                        android:gravity="center_vertical"
                        android:text="@string/restaurant_name_hunan"
                        android:textColor="@color/font_color"
                        android:textSize="16sp" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/divider_line" />

                <!-- 订餐联系人 -->

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/order_id"
                        android:textColor="@color/font_lable"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="15dp"
                        android:gravity="center_vertical"
                        android:text="@string/order_id_data"
                        android:textColor="@color/font_color"
                        android:textSize="16sp" />
                </RelativeLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider_line" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="15dp"
                android:background="@color/divider_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingLeft="15dp" >

                <!-- 用餐时间 -->

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/meal_time"
                        android:textColor="@color/font_lable"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_confirm_meal_time"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="15dp"
                        android:gravity="center_vertical"
                        android:text="@string/time"
                        android:textColor="@color/font_color"
                        android:textSize="16sp" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/divider_line" />

                <!-- 订餐联系人 -->

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/order_contact"
                        android:textColor="@color/font_lable"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="15dp"
                        android:gravity="center_vertical"
                        android:text="@string/name"
                        android:textColor="@color/font_color"
                        android:textSize="16sp" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/divider_line" />

                <!-- 订餐人电话 -->

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/order_contact_phone"
                        android:textColor="@color/font_lable"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="15dp"
                        android:gravity="center_vertical"
                        android:text="@string/phone"
                        android:textColor="@color/font_color"
                        android:textSize="16sp" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/divider_line" />

                <!-- 人数 -->

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/order_people"
                        android:textColor="@color/font_lable"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="15dp"
                        android:gravity="center_vertical"
                        android:text="@string/number"
                        android:textColor="@color/font_color"
                        android:textSize="16sp" />
                </RelativeLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider_line" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="15dp"
                android:background="@color/divider_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingLeft="15dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="0px"
                        android:layout_height="match_parent"
                        android:layout_weight="1.9"
                        android:gravity="left|center_vertical"
                        android:text="@string/order_food_name"
                        android:textColor="@color/font_lable"
                        android:textSize="17sp" />

                    <TextView
                        android:layout_width="0px"
                        android:layout_height="match_parent"
                        android:layout_weight="1.2"
                        android:gravity="center"
                        android:text="@string/order_food_price"
                        android:textColor="@color/font_lable"
                        android:textSize="17sp" />

                    <TextView
                        android:layout_width="0px"
                        android:layout_height="match_parent"
                        android:layout_weight="0.8"
                        android:gravity="center"
                        android:text="@string/order_food_number"
                        android:textColor="@color/font_lable"
                        android:textSize="17sp" />

                    <TextView
                        android:layout_width="0px"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/order_food_subtotal"
                        android:textColor="@color/font_lable"
                        android:textSize="17sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/divider_line" />

                <ListView
                    android:id="@+id/lv_order_food"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@null" >
                </ListView>
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/pay_divider_wave" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="15dp"
                android:background="@color/divider_line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:background="@color/white"
                android:paddingLeft="12dp"
                android:paddingRight="15dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/order_food_total"
                    android:textColor="@color/home_theme"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/tv_confirm_preferentail_price"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:text="@string/preferential"
                    android:textColor="@color/home_theme"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="9dp"
                    android:layout_toLeftOf="@+id/tv_confirm_preferentail_price"
                    android:gravity="center"
                    android:text="@string/markprice"
                    android:textColor="@color/font_lable"
                    android:textSize="16sp" />
            </RelativeLayout>
            
            <Button 
                android:id="@+id/btn_go_pay"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="70dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp"
                android:text="@string/order_have_pay"
                android:background="@drawable/shape_corner_pressed_btn"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@color/white" />
            
            <Button 
                android:id="@+id/btn_goevaluate"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="30dp"
                android:text="@string/order_go_evaluate"
                android:background="@drawable/shape_corner_pressed_btn"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@color/white" />

            <!-- 以下是滚动内容结束 -->
        </LinearLayout>
    </ScrollView>

</LinearLayout>