<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/tv_food_name"
        android:layout_width="0px"
        android:layout_height="match_parent"
        android:layout_weight="1.9"
        android:gravity="left|center_vertical"
        android:text="@string/order_food_name"
        android:textColor="@color/font_color"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="match_parent"
        android:layout_weight="1.2"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_food_price"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:text="@string/order_food_price"
            android:textColor="@color/font_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_food_price_mark"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/order_food_price"
            android:textColor="@color/font_lable"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_food_number"
        android:layout_width="0px"
        android:layout_height="match_parent"
        android:layout_weight="0.8"
        android:gravity="center"
        android:text="@string/order_food_number"
        android:textColor="@color/font_color"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_food_subtotal"
        android:layout_width="0px"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/order_food_subtotal"
        android:textColor="@color/font_color"
        android:textSize="16sp" />

</LinearLayout>