<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_color"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="51dp"
        layout="@layout/act_head_with_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp" >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:background="@drawable/shape_square_et"
            android:gravity="center_vertical"
            android:hint="@string/change_pass_hint_current"
            android:paddingLeft="5dp"
            android:inputType="textPassword"
            android:textColor="@color/font_color"
            android:textSize="16sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginTop="9dp"
            android:background="@drawable/shape_square_et"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:hint="@string/change_pass_hint_new"
            android:paddingLeft="5dp"
            android:textColor="@color/font_color"
            android:textSize="16sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginTop="9dp"
            android:background="@drawable/shape_square_et"
            android:gravity="center_vertical"
            android:hint="@string/change_pass_hint_affirm"
            android:paddingLeft="5dp"
            android:inputType="textPassword"
            android:textColor="@color/font_color"
            android:textSize="16sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/selector_theme_btn"
            android:gravity="center"
            android:text="@string/compalint_commit"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>