<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@color/white"
    android:orientation="horizontal" >
    
    <ImageView 
        android:layout_width="0px"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:src="@drawable/restaurant_icon"
        android:padding="5dp"
        android:layout_marginLeft="5dp"
        android:scaleType="centerCrop"
        android:layout_gravity="center" />
    
    <RelativeLayout 
        android:layout_width="0px"
        android:layout_weight="2.5"
        android:paddingLeft="9dp"
        android:layout_height="match_parent" >
        <TextView
            android:id="@+id/tv_order_restau_name" 
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/restaurant_name_hunan"
            android:textSize="17sp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/font_color"
            android:gravity="center" />
        
        <TextView
            android:id="@+id/tv_business_hours_lable" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="14sp"
            android:layout_below="@+id/tv_order_restau_name"
            android:textColor="@color/font_light"
            android:gravity="center" />
        <TextView
            android:id="@+id/tv_order_money" 
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:text="@string/money"
            android:textSize="17sp"
            android:layout_below="@+id/tv_business_hours_lable"
            android:layout_marginTop="5dp"
            android:textColor="@color/home_theme"
            android:gravity="center" />
        
        <TextView
            android:id="@+id/tv_order_status"
            android:layout_width="75dp"
            android:layout_height="28dp"
            android:text="@string/order_not_pay"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:background="@drawable/shape_left_corner_tv"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:gravity="center" />
    </RelativeLayout>
    
</LinearLayout>
